# rm_agent_helper

./: .gitignore  README.md  pyproject.toml
api/app/: main.py
api/app/routers/: crew.py
knowledge/job-profile/: job1.txt  job2.txt
output/: job_match_report.html  job_match_report.json  resource_report.html  resource_report.json
src/rm_agent_helper/: crew.py  enrich.py  job_report.py  main.py  report.py  utils.py
src/rm_agent_helper/config/: agents.yaml  tasks.yaml
src/rm_agent_helper/tools/: custom_tool.py
